--- a/package.json
+++ b/package.json
@@ -16,10 +16,17 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link-http": "^1.5.17",
     "axios": "^0.18.1",
+    "graphql": "^15.0.0",
+    "graphql-tag": "^2.10.3",
     "quasar": "^1.0.0",
-    "vue-i18n": "^8.0.0",
-    "validator": "^12.1.0"
+    "validator": "^12.1.0",
+    "vue-apollo": "^3.0.3",
+    "vue-cli-plugin-apollo": "^0.21.3",
+    "vue-i18n": "^8.0.0"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0",
